chore(deps): update all non-major dependencies (#260)
* chore(deps): update all non-major dependencies

* Update badges

* refactor: Use OpenRewrite to migrate to Java 21

* refactor: Use OpenRewrite to migrate to Spring Boot 3.3

* feat: Add SBOM support

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <brano.beno@gmail.com>